changes refactorized navbar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,38 +1,61 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
-    <div class="container-fluid container">
-        <a class="navbar-brand mt-2 mt-lg-0" [routerLink]="['/home']">
-            <img
-              src="../../../assets/img/logo.png"
-              height="50"
-              alt="SN Logo"
-              loading="lazy"
-            />
-          </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" id="toggleNavBar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                 
-        </ul>  
-        
-        <div class="d-flex align-items-center" *ngIf="!IsAuthenticated">
-            <button type="button" class="btn btn-primary px-3 me-2" (click)="Login()">
-              Login
-            </button>
-            <button type="button" class="btn btn-primary me-3" (click)="Register()">
-              Sign up
-            </button>
-            
-        </div>
+<nav
+  class="navbar navbar-expand-lg bg-body-tertiary bg-dark"
+  data-bs-theme="dark"
+>
+  <div class="container-fluid container">
+    <a class="navbar-brand mt-2 mt-lg-0" [routerLink]="['/home']">
+      <img
+        src="../../../assets/img/logo.png"
+        height="50"
+        alt="SN Logo"
+        loading="lazy"
+      />
+    </a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+      id="toggleNavBar"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
 
-        <div class="d-flex align-items-center" *ngIf="IsAuthenticated"> 
-          
-          <div class="dropdown" style="color: white; margin-right: 20px;">
-            <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <mat-icon matBadge="7" matBadgeColor="warn" matBadgeOverlap="false">
+      <div class="d-flex align-items-center" *ngIf="!IsAuthenticated">
+        <button
+          type="button"
+          class="btn btn-primary px-3 me-2"
+          (click)="Login()"
+        >
+          Login
+        </button>
+        <button type="button" class="btn btn-primary me-3" (click)="Register()">
+          Sign up
+        </button>
+      </div>
+
+      <div class="d-flex align-items-center" *ngIf="IsAuthenticated">
+        <ng-container *ngIf="userNav">
+          <div class="dropdown" style="color: white; margin-right: 20px">
+            <a
+              href="#"
+              class="nav-link dropdown-toggle"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              <mat-icon
+                matBadge="7"
+                matBadgeColor="warn"
+                matBadgeOverlap="false"
+              >
                 <i class="fa-solid fa-message"></i>
-              </mat-icon>          
+              </mat-icon>
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">Message 1</a></li>
@@ -41,22 +64,38 @@
             </ul>
           </div>
 
-          <div class="dropdown" style="color: white; margin-right: 20px;">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <mat-icon matBadge="15" matBadgeColor="warn" matBadgeOverlap="false">
+          <div class="dropdown" style="color: white; margin-right: 20px">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              <mat-icon
+                matBadge="15"
+                matBadgeColor="warn"
+                matBadgeOverlap="false"
+              >
                 <i class="fa-solid fa-bell"></i>
-              </mat-icon>          
+              </mat-icon>
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">Action</a></li>
               <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
+              <li><hr class="dropdown-divider" /></li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
           </div>
 
-          <div class="dropdown" style="color: white; margin-right: 20px;">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <div class="dropdown" style="color: white; margin-right: 20px">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
               <img
                 [src]="image"
                 class="rounded-circle"
@@ -65,45 +104,55 @@
                 alt="Black and White Portrait of a Man"
                 loading="lazy"
                 *ngIf="!url"
-              />        
+              />
               <img
-              src="../../../assets/img/perfilH.png"
+                src="../../../assets/img/perfilH.png"
                 class="rounded-circle"
                 height="25"
                 width="25"
                 alt="Black and White Portrait of a Man"
                 loading="lazy"
                 *ngIf="url && userNav.sexo === 'Masculino'"
-              />        
+              />
               <img
-              src="../../../assets/img/perfilM.png"
+                src="../../../assets/img/perfilM.png"
                 class="rounded-circle"
-                height="25" 
-                width="25"              
+                height="25"
+                width="25"
                 alt="Black and White Portrait of a Man"
                 loading="lazy"
                 *ngIf="url && userNav.sexo === 'Femenino'"
-              />        
+              />
             </a>
             <ul class="dropdown-menu">
-              <li><span class="dropdown-item">
-                &nbsp; {{userNav.email}}
-              </span></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" [routerLink]="['/myprofile']" style="cursor: pointer;">
-                <i class="fa-solid fa-user"></i> &nbsp; Profile
-              </a></li>
-              <li><a class="dropdown-item" href="#">
-                <i class="fa-solid fa-gear"></i> &nbsp; Settings
-              </a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item logout" (click)="Logout()">
-                <i class="fa-solid fa-right-from-bracket"></i> &nbsp; Logout
-              </a></li>
+              <li>
+                <span class="dropdown-item"> &nbsp; {{ userNav.email }} </span>
+              </li>
+              <li><hr class="dropdown-divider" /></li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  [routerLink]="['/myprofile']"
+                  style="cursor: pointer"
+                >
+                  <i class="fa-solid fa-user"></i> &nbsp; Profile
+                </a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#">
+                  <i class="fa-solid fa-gear"></i> &nbsp; Settings
+                </a>
+              </li>
+              <li><hr class="dropdown-divider" /></li>
+              <li>
+                <a class="dropdown-item logout" (click)="Logout()">
+                  <i class="fa-solid fa-right-from-bracket"></i> &nbsp; Logout
+                </a>
+              </li>
             </ul>
           </div>
-                        
-        </div>
+        </ng-container>
       </div>
     </div>
-  </nav>
+  </div>
+</nav>
