refactorizado y formateado todo

--- a/src/app/components/my-profile/my-profile.component.css
+++ b/src/app/components/my-profile/my-profile.component.css
@@ -1,41 +1,40 @@
-#myProfPict{
-    border-radius: 10px;
-    border-width: 5px;
-    border-color: blue;
+#myProfPict {
+  border-radius: 10px;
+  border-width: 5px;
+  border-color: blue;
 }
 
 .text-muted i {
-    margin: 0 10px;
+  margin: 0 10px;
 }
 
-
 .file-select {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .file-select::before {
-    background-color: #5678EF;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 3px;
-    content: 'Seleccionar'; /* testo por defecto */
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-  }
-  
-  .file-select input[type="file"] {
-    opacity: 0;
-    width: 200px;
-    height: 32px;
-    display: inline-block;
-  }
-  
-  #src-file1::before {
-    content: 'Cambiar Profile Picture';
-  }
+  position: relative;
+  display: inline-block;
+}
+
+.file-select::before {
+  background-color: #5678ef;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3px;
+  content: "Seleccionar"; /* testo por defecto */
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.file-select input[type="file"] {
+  opacity: 0;
+  width: 200px;
+  height: 32px;
+  display: inline-block;
+}
+
+#src-file1::before {
+  content: "Cambiar Profile Picture";
+}
