--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,8 +1,7 @@
-#toggleNavBar{
-    background-color: #e3f2fd;
+#toggleNavBar {
+  background-color: #e3f2fd;
 }
 
-.logout
-{
-    cursor: pointer;
+.logout {
+  cursor: pointer;
 }
