--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,12 +1,10 @@
-
-    <footer class="bg-dark text-center text-white mt-5"> 
-        <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-          © 2023 Copyright:
-          <a class="text-white" href="https://www.jesus-pena.com/">Website Made By Jesus Eiseel Pena Ceballo</a>
-        </div>
-        <!-- Copyright -->
-    </footer>
-
-
-
+<footer class="bg-dark text-center text-white mt-5">
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+    © 2023 Copyright:
+    <a class="text-white" href="https://www.jesus-pena.com/"
+      >Website Made By Jesus Eiseel Pena Ceballo</a
+    >
+  </div>
+  <!-- Copyright -->
+</footer>
