--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,8 +1,7 @@
 .text-muted i {
-    margin: 0 10px;
+  margin: 0 10px;
 }
 
-#publishButton
-{
-    float: right;
+#publishButton {
+  float: right;
 }
